Implementing CleanUpRefreshToken ... ProductAdmin role Refresh token index FallbackController and prepare project to serve angular client app

--- a/Api/appsettings.Development.json
+++ b/Api/appsettings.Development.json
@@ -4,6 +4,7 @@
     "TokenLifetime": "00:00:45"
 
   },
+  "CleanUpRefreshTokensPeriod": "00:00:30",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
