--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~11.2.9",
     "@kolkov/ngx-gallery": "^1.2.3",
     "@schematics/angular": "^9.1.0",
+    "@swimlane/ngx-datatable": "^19.0.0",
     "bootstrap": "4.1.1",
     "bootswatch": "^4.5.2",
     "font-awesome": "^4.7.0",
