--- a/client/angular.json
+++ b/client/angular.json
@@ -56,13 +56,21 @@
                   "maximumError": "10kb"
                 }
               ]
+            },
+            "dev": {
+              "optimization": false,
+              "sourceMap": true,
+              "namedChunks": true,
+              "extractLicenses": false,
+              "vendorChunk": false,
+              "buildOptimizer": false
             }
           }
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "WebShop:build"
+            "browserTarget": "WebShop:build:dev"
           },
           "configurations": {
             "production": {
